--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>RENT SHOP - Accueil</title>
   <!--script src="https://code.jquery.com/jquery-3.6.0.min.js"></script-->
   <script src="js/jquery-3.6.0.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link href="C:\wamp64\www\rent_shop\css\tailwind.min.2.2.161" rel="stylesheet">
+  <link href="\C:\wamp64\www\rent_shop\css\tailwind.min.2.2.16.css" rel="stylesheet">
+  <link href="C:\wamp64\www\rent_shop\css\font-awesome.min.6.0.0.css" rel="stylesheet">
   <style>
     .glassmorphism {
       background: rgba(255, 255, 255, 0.1);
