--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <h2 class="text-xl font-bold text-indigo-400">Recettes du mois</h2>
               <i class="fas fa-chart-line text-2xl text-indigo-500"></i>
             </div>
-            <p class="text-3xl font-bold gradient-text">3000 €</p>
+            <p class="text-3xl font-bold gradient-text">3000 F CFA</p>
           </div>
 
           <div class="glassmorphism rounded-xl p-6 hover-glow transition-all duration-300">
@@ -120,7 +120,7 @@
               <h2 class="text-xl font-bold text-indigo-400">Recette journalière</h2>
               <i class="fas fa-euro-sign text-2xl text-indigo-500"></i>
             </div>
-            <p class="text-3xl font-bold gradient-text">100 €</p>
+            <p class="text-3xl font-bold gradient-text">100 F CFA</p>
           </div>
         </div>
 
