--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!--script src="https://code.jquery.com/jquery-3.6.0.min.js"></script-->
   <script src="js/jquery-3.6.0.min.js"></script>
   <link href="C:\wamp64\www\rent_shop\css\tailwind.min.2.2.161" rel="stylesheet">
-  <link href="\C:\wamp64\www\rent_shop\css\tailwind.min.2.2.16.css" rel="stylesheet">
-  <link href="C:\wamp64\www\rent_shop\css\font-awesome.min.6.0.0.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     .glassmorphism {
       background: rgba(255, 255, 255, 0.1);
@@ -104,7 +104,7 @@
               <h2 class="text-xl font-bold text-indigo-400">Nombre de locataires</h2>
               <i class="fas fa-users text-2xl text-indigo-500"></i>
             </div>
-            <p class="text-3xl font-bold gradient-text">45</p>
+            <p class="text-3xl font-bold gradient-text">450</p>
           </div>
 
           <div class="glassmorphism rounded-xl p-6 hover-glow transition-all duration-300">
