--- a/cat_paye.html
+++ b/cat_paye.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestion des Situations de Paiement</title>
   <script src="js/jquery-3.6.0.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link href="assets\css\tailwind.min.css" rel="stylesheet">
+  <link href="assets\css\all.min.css" rel="stylesheet">
   <style>
     .glassmorphism {
       background: rgba(255, 255, 255, 0.1);
