--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!--script src="https://code.jquery.com/jquery-3.6.0.min.js"></script-->
   <script src="js/jquery-3.6.0.min.js"></script>
   <link href="C:\wamp64\www\rent_shop\css\tailwind.min.2.2.161" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link href="assets\css\tailwind.min.css" rel="stylesheet">
+  <link href="assets\css\all.min.css" rel="stylesheet">
   <style>
     .glassmorphism {
       background: rgba(255, 255, 255, 0.1);
